--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jysmol-parser",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
     "bun-types": "latest"
